demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: 713881823524.dkr.ecr.ap-south-1.amazonaws.com/kubernetes/final_project:1.0
          ports:
            - containerPort: 3000
