demo-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: ClusterIP  
  selector:
    app: demo  
  ports:
    - protocol: TCP
      port: 80       # Port the Ingress will connect to
      targetPort: 3000  # Port inside the container
