demo-lb-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: demo
